# ScenSim

./: CMakeLists.txt
src/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  World.cpp  World.hpp  client_main.cpp  server_main.cpp
src/proto/: simulation.proto
src/utils/: MessageUtilities.cpp  MessageUtilities.hpp
